OMG it's working

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -31,7 +31,7 @@
     <canvas id="canvas" width="400" height="300"></canvas>
   </div>
 
-  <div class='video'>
+  <div className='video'>
     <img id="photo" width="400" height="300">
   </div>
   <script src="{{ url_for('static',filename='script.js') }}"></script>
